# zephyr-applications

./: .gitignore
blinky/: CMakeLists.txt  buildall.sh  prj.conf
blinky/boards/: esp32_devkitc_wroom_procpu.overlay  esp32s3_matrix_procpu.overlay
blinky/src/: main.c
echo_server/: CMakeLists.txt  README.md  modules.conf  net.conf  prj.conf
echo_server/src/: main.c
flash_access/: CMakeLists.txt  Makefile  README.md  prj.conf
flash_access/boards/: esp32s3_matrix_procpu.overlay
flash_access/src/: main.c
lfs_demo/: CMakeLists.txt  prj.conf
lfs_demo/src/: main.c
oled_demo/: CMakeLists.txt  prj.conf
oled_demo/boards/: esp32c3_042_oled.conf  esp32c3_042_oled.overlay
oled_demo/src/: font5x7.c  font8x8.c  main.c  sensor.c  sensor.h
qtpy_demo/: CMakeLists.txt
qtpy_demo/src/: main.c
rpc_demo/: CMakeLists.txt  Makefile  README.md  callsets.yaml  prj.conf
rpc_demo/boards/: esp32_devkitc_wroom_procpu.conf  esp32c3_042_oled.conf
rpc_demo/conf/: kernel.conf  modules.conf  net.conf  nv.conf  rpc.conf  wifi.conf
rpc_demo/python/: init_env.sh  requirements.txt  setup.py
rpc_demo/python/app/: test.py
rpc_demo/src/: main.c
serialnet/: Kconfig  README.md  prj.conf
serialnet/boards/: esp32_devkitc_wroom_procpu.conf  esp32_devkitc_wroom_procpu.overlay  esp32s3_matrix_procpu.overlay  qemu_x86.conf
serialnet/src/: main.c
tcp_echo/: CMakeLists.txt  prj.conf
tcp_echo/boards/: esp32s3_qtpy_procpu.overlay
tcp_echo/src/: main.c
usbnet/: CMakeLists.txt  README.md  prj.conf
usbnet/src/: main.c
wifi_sta/: CMakeLists.txt  README.md  buildall.sh  prj.conf
wifi_sta/src/: main.c
ws2812_demo/: Kconfig  prj.conf
ws2812_demo/boards/: esp32_devkitc_wroom_procpu.conf  esp32c3_042_oled.overlay  esp32s3_matrix_procpu.overlay  esp32s3_qtpy_procpu.conf
ws2812_demo/src/: main.c
